SERVER-27930 Invalidate old index record IDs after renaming collections